refactor: 更新 KnowledgeDocumentUpdateRequest 和服务实现，以提高一致性和功能性
- 在 KnowledgeDocumentUpdateRequest 中将 scheduleEnabled 类型从 Boolean 更改为 Integer，以更好地与数据库模式对齐。
- 删除 KnowledgeBaseServiceImpl 中未使用的导入和参数，以简化代码。
- 强化 KnowledgeChunkServiceImpl 和 KnowledgeDocumentScheduleServiceImpl 的事务管理和错误处理。
- 重构 IngestionPipelineService 和 IngestionTaskService，以实现新的请求和响应结构，确保整个摄取过程的一致性。
- 更新 KnowledgeVectorSpace 和 KnowledgeVectorSpaceId，使用 Lombok 注解，使代码更简洁并提高可维护性。